Updates to html with Tim's help

--- a/css/teammaker.css
+++ b/css/teammaker.css
@@ -49,6 +49,14 @@ body {
   display: flex;
 }
 
+.lumineStartup {
+  display:none;
+}
+
+.aetherStartup {
+  display:none;
+}
+
 header {
   height: 5.66rem;
   display: none;
