--- a/css/teammaker.css
+++ b/css/teammaker.css
@@ -270,7 +270,7 @@ header .socialMedia > div svg {
   transition: opacity 300ms ease-in-out;
 }
 
-/*.character .arrows {
+.character .arrows {
   position: absolute;
   height: 100%;
   width: 90%;
@@ -289,7 +289,7 @@ header .socialMedia > div svg {
   left: 9%;
   -webkit-transform: scale(0);
           transform: scale(0);
-}*/
+}
 
 .character .change,
 .character .swap {
